force-app/main/default/objects/Collection_Order__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account that this collection order belongs to</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Collection Orders (RMA)</relationshipLabel>
    <relationshipName>Collection_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>