force-app/main/default/objects/Collection_Order__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>RMA case that initiated this collection order</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Collection Orders (RMA)</relationshipLabel>
    <relationshipName>Collection_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>